Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-115537

[QML Docs] Image.fillMode enum documentation has a broken table formatting

XMLWordPrintable

    • e80921b01 (dev), 45a9b20d6 (6.6), 6749c203f (tqtc/lts-6.2), 9ff4900ab (6.5), 23fd844bf (dev), 6417a2ff2 (6.5), f22565659 (6.6)
    • DaVinci 84

      The table which describes the possible values for Image.fillMode enum has a broken formatting.

      I can see it both in Qt 6.5 docs, and in doc-snapshot.

        For Gerrit Dashboard: QTBUG-115537
        # Subject Branch Project Status CR V

            andreas.eliasson Andreas Eliasson
            ivan.solovev Ivan Solovev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes