Doc: Add \br between \value and \table

Whenever a \table follows a \value, the contents of the two commands
merge, which breaks the table formatting. Fix this by adding a \br
before the \table.

Fixes: QTBUG-115537
Change-Id: I8e5836a8fc82dc9e59eb5fe210da9996d4f66d95
Reviewed-by: Safiyyah Moosa <safiyyah.moosa@qt.io>
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
(cherry picked from commit e80921b01f225021d1936a8ac0079553a2a186b6)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>